Atualização para função de salvar figuras

--- a/scripts/FS_symptonsDS_new.ipynb
+++ b/scripts/FS_symptonsDS_new.ipynb
@@ -514,8 +514,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Atributo    Score\n",
-      "0      Age  0.12512\n"
+      "  Atributo     Score\n",
+      "0      Age  0.124196\n"
      ]
     }
    ],
@@ -622,6 +622,7 @@
     "plt.yticks(fontsize=12)\n",
     "plt.xlabel(\"Score de Informação Mutua\",fontsize=14)\n",
     "plt.ylabel(\"Atributos\",fontsize=14)\n",
+    "plt.savefig('barplot_early_cat_mu.png',dpi=400,bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -694,6 +695,7 @@
     "plt.yticks(fontsize=12)\n",
     "plt.xlabel(\"Estatística Qui-quadrado\",fontsize=14)\n",
     "plt.ylabel(\"Atributos\",fontsize=14)\n",
+    "plt.savefig('barplot_early_cat_chi.png',dpi=400,bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -1227,6 +1229,7 @@
     "plt.yticks(fontsize=12)\n",
     "plt.xlabel(\"Score de Informação mutua\",fontsize=14)\n",
     "plt.ylabel(\"Atributos\",fontsize=14)\n",
+    "plt.savefig('barplot_early_pair_cat_mu.png',dpi=400,bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -1300,6 +1303,7 @@
     "plt.yticks(fontsize=12)\n",
     "plt.xlabel(\"Estatística Qui-quadrado\",fontsize=14)\n",
     "plt.ylabel(\"Atributos\",fontsize=14)\n",
+    "plt.savefig('barplot_early_pair_cat_chi.png',dpi=400,bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
